<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TimerFragment">


        <TextView
            android:id="@+id/timer_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="32dp"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="70sp"
            tools:text="10:00" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_gravity="center"
            android:background="@drawable/circle_shape"
            android:indeterminate="false"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@drawable/circular_progress_bar" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="@dimen/fab_margin_big"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_cancel_24dp"
            app:backgroundTint="#F44336"
            app:fabCustomSize="@dimen/fab_size_big" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/finish_task_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin_big"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_check_24dp"
            app:backgroundTint="#4CAF50"
            app:fabCustomSize="@dimen/fab_size_big" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/start_task_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin_big"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_start_24dp"
            android:visibility="gone"
            app:backgroundTint="#4CAF50"
            app:fabCustomSize="@dimen/fab_size_big" />

    </FrameLayout>
</LinearLayout>