...
    <string name="in_minutes">in minutes</string>
    <string name="reset_time_summary">number from 0 to 23</string>

    <!-- TimerFragment -->
    <string name="countdown_text">%1$d:%2$s%3$d</string>
    <string name="description_task">%1$s\n%2$d\n%3$d</string>
    <string name="description_break">Break</string>
    <string name="add_task_to_queue">Add to queue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_queue">Empty queue</string>
    <string name="new_task_session_no_title">Number of sessions</string>
    <string name="sess_no_title">Number of sessions:</string>
    <string name="task_list_button">Task List Button</string>
    <string name="test">test</string>
    <string name="stats">Stats</string>
    <string name="tasks">Tasks</string>
...
