<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/newTaskFragment"
            android:orderInCategory="100"
            android:title="@string/action_edit_task"
            app:showAsAction="always"
            android:icon="@drawable/ic_edit_black_24dp"
            android:visible="true" />

    <item android:id="@+id/action_delete_task"
            android:orderInCategory="100"
            android:title="@string/action_delete_task"
            app:showAsAction="always"
            android:icon="@drawable/ic_delete_black_24dp"
            android:visible="true" />


    <item android:id="@+id/settingsFragment"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never"
            android:visible="true" />

    <item android:id="@+id/action_cancel_task"
            android:orderInCategory="100"
            android:title="@string/action_cancel_edit"
            app:showAsAction="always"
            android:icon="@drawable/x_symbol_24dp"
            android:visible="true" />
</menu>