<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/task_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:animationCache="true"
    android:background="@android:color/holo_orange_light"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/category_name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_weight="4"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:typeface="normal" />

    <TextView
        android:id="@+id/task_numbers"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:gravity="end"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:typeface="normal" />
</LinearLayout>